--- a/planning/quad_tree/src/CMakeLists.txt
+++ b/planning/quad_tree/src/CMakeLists.txt
@@ -3,16 +3,20 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 # Include path
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)
-# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/inc)
+# include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
 find_package(OpenCV REQUIRED)
 
 # Add libraries
-# SET(LIBHELLO_SRC hello.cpp)
-# ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC})
+set(QTREE_LIB_SRC 
+	qtree_builder.cpp
+	quad_tree.cpp
+)
+add_library(qtree STATIC ${QTREE_LIB_SRC})
+target_link_libraries(qtree ${OpenCV_LIBS})
 
 # Add executables
-add_executable(build_quadtree build_quadtree.cpp)
+add_executable(build_quadtree test_quadtree.cpp)
 target_link_libraries(build_quadtree ${OpenCV_LIBS})
