--- a/planning/src/graph/CMakeLists.txt
+++ b/planning/src/graph/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 # Include path
 #include_directories(${CMAKE_SOURCE_DIR}/inc)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/src/quadtree)
 
 # Dependency libraries
 find_package(OpenCV REQUIRED)
@@ -12,9 +13,10 @@ find_package(OpenCV REQUIRED)
 # Add libraries
 set(GRAPH_LIB_SRC
 	graph.cpp
+	graph_builder.cpp
 )
 add_library(graph STATIC ${GRAPH_LIB_SRC})
-target_link_libraries(graph ${OpenCV_LIBS})
+target_link_libraries(graph qtree)
 
 # Add executables
 add_executable(build_graph test_graph.cpp)
