--- a/planning/src/graph/CMakeLists.txt
+++ b/planning/src/graph/CMakeLists.txt
@@ -19,6 +19,6 @@ add_library(graph STATIC ${GRAPH_LIB_SRC})
 target_link_libraries(graph qtree)
 
 # Add executables
-add_executable(build_graph test_graph.cpp)
+#add_executable(build_graph test_graph.cpp)
 #target_link_libraries(build_graph graph ${OpenCV_LIBS})
-target_link_libraries(build_graph graph)
+#target_link_libraries(build_graph graph)
