created apps sub-module

--- a/planning/CMakeLists.txt
+++ b/planning/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(src/square_grid)
 add_subdirectory(src/graph)
 add_subdirectory(src/map)
 add_subdirectory(src/visualizer)
+add_subdirectory(src/apps)
