--- a/planning/src/apps/CMakeLists.txt
+++ b/planning/src/apps/CMakeLists.txt
@@ -9,17 +9,18 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/src/map)
 include_directories(${CMAKE_SOURCE_DIR}/src/quadtree)
 include_directories(${CMAKE_SOURCE_DIR}/src/graph)
+include_directories(${CMAKE_SOURCE_DIR}/src/visualizer)
 
 # Dependency libraries
 find_package(OpenCV REQUIRED)
 
 # Add libraries
-set(VIS_LIB_SRC
-    graph_vis.cpp
-)
-add_library(vis STATIC ${VIS_LIB_SRC})
-target_link_libraries(vis map ${OpenCV_LIBS})
+#set(VIS_LIB_SRC
+#    graph_vis.cpp
+#)
+#add_library(graph_vis STATIC ${VIS_LIB_SRC})
+#target_link_libraries(vis ${OpenCV_LIBS})
 
 # Add executables
-#add_executable(test_graph test_graph.cpp)
-#target_link_libraries(test_graph qtree vis map ${OpenCV_LIBS})
+add_executable(test_graph test_graph.cpp)
+target_link_libraries(test_graph qtree vis map ${OpenCV_LIBS})
