square grid can be created and visualized now

--- a/planning/src/apps/CMakeLists.txt
+++ b/planning/src/apps/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src/map)
 include_directories(${CMAKE_SOURCE_DIR}/src/quadtree)
 include_directories(${CMAKE_SOURCE_DIR}/src/graph)
 include_directories(${CMAKE_SOURCE_DIR}/src/visualizer)
+include_directories(${CMAKE_SOURCE_DIR}/src/square_grid)
 
 # Dependency libraries
 find_package(OpenCV REQUIRED)
@@ -24,3 +25,6 @@ find_package(OpenCV REQUIRED)
 # Add executables
 add_executable(test_graph test_graph.cpp)
 target_link_libraries(test_graph qtree vis map ${OpenCV_LIBS})
+
+add_executable(test_grid test_squaregrid.cpp)
+target_link_libraries(test_grid squaregrid vis map ${OpenCV_LIBS})
