--- a/control/hummingbird/quad_ctrl/src/vrep_sim/CMakeLists.txt
+++ b/control/hummingbird/quad_ctrl/src/vrep_sim/CMakeLists.txt
@@ -3,8 +3,8 @@ include_directories(${CMAKE_SOURCE_DIR}/inc)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/src/control)
-include_directories(${CMAKE_SOURCE_DIR}/src/vrep_remote_api/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/vrep_remote_api/remoteApi)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vrep_lib/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vrep_lib/remoteApi)
 include_directories(${CMAKE_SOURCE_DIR}/src/g3log_srcl/src)
 
 # Dependency libraries
@@ -12,14 +12,30 @@ include_directories(${CMAKE_SOURCE_DIR}/src/g3log_srcl/src)
 
 # Add libraries
 set(VREPSIM_LIB_SRC
+  # vrep remote api
+  vrep_lib/remoteApi/extApi.c
+  vrep_lib/remoteApi/extApiCustom.c
+  vrep_lib/remoteApi/extApiPlatform.c
+  # vrep quad simulation
   vrep_client/quad_sim_client.cpp
-  sim_process/quad_sim_process.cpp
-  utils/utils_log.cpp
+  sim_process/quad_sim_process.cpp  
 )
+
 add_library(vrep_sim STATIC ${VREPSIM_LIB_SRC})
-add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
-#target_link_libraries(vis ${OpenCV_LIBS})
+if (ENABLE_G3LOG)
+	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255 -DENABLE_LOG)
+else (ENABLE_G3LOG)
+	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
+endif (ENABLE_G3LOG)
+
+if (UNIX)
+ 	target_link_libraries(vrep_sim pthread)
+endif (UNIX)
 
 # Add executables
 add_executable(quad_vrep_sim main.cpp)
-target_link_libraries(quad_vrep_sim vrep_sim vrep_remote_api quad_con g3logger)
+if (ENABLE_G3LOG)
+	target_link_libraries(quad_vrep_sim vrep_sim quad_con g3logger)
+else (ENABLE_G3LOG)
+	target_link_libraries(quad_vrep_sim vrep_sim quad_con)
+endif (ENABLE_G3LOG)
