--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ build
 *.m~
 utils/log_analyzer/build-log_analyzer-Desktop_Qt_5_5_1_GCC_64bit-Debug/
 
+# Doxygen
+planning/docs/doxygen/html
+planning/docs/doxygen/latex
+
 # Compiled Object files
 *.slo
 *.lo
