--- a/planning/CMakeLists.txt
+++ b/planning/CMakeLists.txt
@@ -16,6 +16,10 @@ else()
         message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 or C++11 support. Please use a different C++ compiler.")
 endif()
 
+# Put all binary files into /bin and libraries into /lib
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+
 # Add sub source directories
 add_subdirectory(src/quadtree)
 add_subdirectory(src/square_grid)
