--- a/planning/src/graph/CMakeLists.txt
+++ b/planning/src/graph/CMakeLists.txt
@@ -1,7 +1,3 @@
-# Put all binary files into /bin and libraries into /lib
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
-
 # Include path
 #include_directories(${CMAKE_SOURCE_DIR}/inc)
 #include_directories(${CMAKE_SOURCE_DIR}/src)
@@ -11,10 +7,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #find_package(OpenCV REQUIRED)
 
 # Add libraries
-set(GRAPH_LIB_SRC
+#set(GRAPH_LIB_SRC
 	#graph.cpp
 	#graph_builder.cpp
-)
+#)
 #add_library(graph STATIC ${GRAPH_LIB_SRC})
 #target_link_libraries(graph qtree)
 
