updated vrep remote api, updated quad_ctrl folder

--- a/control/hummingbird/quad_ctrl/CMakeLists.txt
+++ b/control/hummingbird/quad_ctrl/CMakeLists.txt
@@ -35,3 +35,4 @@ endif(ENABLE_G3LOG)
 # Add sub source directories
 add_subdirectory(src/control)
 add_subdirectory(src/vrep_sim)
+add_subdirectory(src/apps)
