--- a/planning/src/graph/CMakeLists.txt
+++ b/planning/src/graph/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Include path
 #include_directories(${CMAKE_SOURCE_DIR}/inc)
-#include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
