ported gui to this project

--- a/planning/CMakeLists.txt
+++ b/planning/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(src/graph)
 add_subdirectory(src/map)
 add_subdirectory(src/visualizer)
 add_subdirectory(src/apps)
+add_subdirectory(src/gui)
