--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,10 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(srcl_ctrl)
 
-## Set compiler to use c++ 11 features
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX14)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-elseif(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-	message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 or C++11 support. Please use a different C++ compiler.")
-endif()
-
 ## Put all binary files into /bin and libraries into /lib
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+set(ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 
 # Choose to enable g3log or not: on/off
 set(ENABLE_G3LOG off)
@@ -26,6 +12,9 @@ set(ENABLE_G3LOG off)
 if (ENABLE_G3LOG)
 include_directories(${CMAKE_SOURCE_DIR}/third_party/g3log_srcl/src)
 endif (ENABLE_G3LOG)
+
+include_directories(${CMAKE_SOURCE_DIR}/third_party/octomap/include)
+set(Octomap_LIBS octomap octomath)
 
 ## Add sub source directories
 add_subdirectory(control)
