implementing a motion server

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ build
 utils/log_analyzer/build-log_analyzer-Desktop_Qt_5_5_1_GCC_64bit-Debug/
 
 # Doxygen
-planning/docs/doxygen/html
-planning/docs/doxygen/latex
+docs/doxygen/html/
+docs/doxygen/latex
 
 # Compiled Object files
 *.slo
