lcm type of motion server works now

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ utils/log_analyzer/build-log_analyzer-Desktop_Qt_5_5_1_GCC_64bit-Debug/
 docs/doxygen/html/
 docs/doxygen/latex
 
+# LCM
+pc/src/comm/lcmtypes/c
+pc/src/comm/lcmtypes/cpp
+pc/src/comm/lcmtypes/java
+pc/src/comm/lcmtypes/python
+
 # Compiled Object files
 *.slo
 *.lo
