separated motion server from quad_ctrl, now quad_ctrl doesn't depend on lcm

--- a/pc/src/control/CMakeLists.txt
+++ b/pc/src/control/CMakeLists.txt
@@ -22,5 +22,6 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 ## Add sub source directories
 add_subdirectory(src/ctrl_utils)
 add_subdirectory(src/quad_ctrl)
+add_subdirectory(src/motion_server)
 add_subdirectory(src/vrep_sim)
 add_subdirectory(src/apps)
