renamed map to map2d

--- a/pc/planning/src/gui/CMakeLists.txt
+++ b/pc/planning/src/gui/CMakeLists.txt
@@ -72,4 +72,4 @@ qt5_add_resources(MOC_RES_H
 qt5_generate_moc(planner_gui.cpp quad_gui.moc)
 add_executable(planner_gui ${SOURCE_FILES} ${MOC_SRC_H} ${MOC_GUI_H} ${MOC_RES_H})
 set_target_properties(planner_gui PROPERTIES COMPILE_FLAGS "-std=c++11 -g")
-target_link_libraries(planner_gui map squaregrid vis ${OpenCV_LIBS} ${Boost_LIBRARIES} Qt5::Widgets)
+target_link_libraries(planner_gui map2d squaregrid vis ${OpenCV_LIBS} ${Boost_LIBRARIES} Qt5::Widgets)
