--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(src/quadtree)
 add_subdirectory(src/square_grid)
 add_subdirectory(src/graph)
-add_subdirectory(src/map)
+add_subdirectory(src/map2d)
 add_subdirectory(src/map3d)
 add_subdirectory(src/visualizer)
 add_subdirectory(src/apps)
