--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -2,11 +2,6 @@
 #include_directories(${CMAKE_SOURCE_DIR}/inc)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src)
-include_directories(${CMAKE_SOURCE_DIR}/src/map)
-include_directories(${CMAKE_SOURCE_DIR}/src/quadtree)
-include_directories(${CMAKE_SOURCE_DIR}/src/graph)
-include_directories(${CMAKE_SOURCE_DIR}/src/visualizer)
-include_directories(${CMAKE_SOURCE_DIR}/src/square_grid)
 
 # Dependency libraries
 find_package(OpenCV REQUIRED)
@@ -26,14 +21,14 @@ add_executable(simple_graph simple_graph.cpp)
 #target_link_libraries(simple_graph )
 
 add_executable(test_qtree test_quadtree.cpp)
-target_link_libraries(test_qtree qtree vis map ${OpenCV_LIBS})
+target_link_libraries(test_qtree qtree vis map2d ${OpenCV_LIBS})
 
 add_executable(test_sgrid test_squaregrid.cpp)
-target_link_libraries(test_sgrid squaregrid vis map ${OpenCV_LIBS})
+target_link_libraries(test_sgrid squaregrid vis map2d ${OpenCV_LIBS})
 
 add_executable(test_image test_image.cpp)
 target_link_libraries(test_image vis ${OpenCV_LIBS})
 
 add_executable(test_traj test_traj.cpp)
-target_link_libraries(test_traj map vis ${OpenCV_LIBS})
+target_link_libraries(test_traj map2d vis ${OpenCV_LIBS})
 
