--- a/pc/CMakeLists.txt
+++ b/pc/CMakeLists.txt
@@ -24,4 +24,5 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 add_subdirectory(comm)
 add_subdirectory(control)
 add_subdirectory(planning)
+add_subdirectory(gui)
 add_subdirectory(third_party)
