--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -27,4 +27,4 @@ add_subdirectory(src/map2d)
 add_subdirectory(src/map3d)
 add_subdirectory(src/visualizer)
 add_subdirectory(src/apps)
-add_subdirectory(src/gui)
+#add_subdirectory(src/gui)
