--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ pc/gui/*~
 */*.*~
 *.m~
 utils/log_analyzer/build-log_analyzer-Desktop_Qt_5_5_1_GCC_64bit-Debug/
+pc/gui/CMakeLists.txt.user
 
 # Doxygen
 docs/doxygen/html/
