trying ompl functions

--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(src/map)
 #endif (LCM_FOUND)
 add_subdirectory(src/visualizer)
 add_subdirectory(src/apps)
+add_subdirectory(src/smp)
