removed the integration of ompl, will try smp first

--- a/pc/planning/src/smp/CMakeLists.txt
+++ b/pc/planning/src/smp/CMakeLists.txt
@@ -13,8 +13,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #target_link_libraries(smp ${OpenCV_LIBS})
 
 # Add executables
-add_executable(test_ompl test_ompl.cpp)
-target_link_libraries(test_ompl ompl)
+#add_executable(test_ompl test_ompl.cpp)
+#target_link_libraries(test_ompl ompl)
 
-add_executable(test_smp test_smp.cpp)
-target_link_libraries(test_smp ompl)
+#add_executable(test_smp test_smp.cpp)
+#target_link_libraries(test_smp ompl)
