--- a/pc/planning/src/smp/CMakeLists.txt
+++ b/pc/planning/src/smp/CMakeLists.txt
@@ -13,6 +13,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #target_link_libraries(smp ${OpenCV_LIBS})
 
 # Add executables
+add_executable(dubins_rrtstar standalone_rrtstar_dubins_car.cpp)
+target_link_libraries(dubins_rrtstar ${SMP_KARAMAN_LIB})
+
 #add_executable(test_ompl test_ompl.cpp)
 #target_link_libraries(test_ompl ompl)
 
