saved work on quadrotor rrts

--- a/pc/planning/src/smp/CMakeLists.txt
+++ b/pc/planning/src/smp/CMakeLists.txt
@@ -16,6 +16,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(dubins_rrtstar dubins_rrtstar.cpp)
 target_link_libraries(dubins_rrtstar ${SMP_KARAMAN_LIB})
 
+add_executable(quadrotor_rrtstar quadrotor_rrtstar.cpp)
+target_link_libraries(quadrotor_rrtstar ${SMP_KARAMAN_LIB})
+
 #add_executable(test_ompl test_ompl.cpp)
 #target_link_libraries(test_ompl ompl)
 
