--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -19,10 +19,10 @@ endif()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 ## Add sub source directories
-#add_subdirectory(src/quadtree)
-#add_subdirectory(src/square_grid)
+add_subdirectory(src/quadtree)
+add_subdirectory(src/square_grid)
 add_subdirectory(src/graph)
-#add_subdirectory(src/map)
-#add_subdirectory(src/visualizer)
-#add_subdirectory(src/apps)
-#add_subdirectory(src/smp)
+add_subdirectory(src/map)
+add_subdirectory(src/visualizer)
+add_subdirectory(src/apps)
+add_subdirectory(src/smp)
