recovered virtual specifier in BDSBase, will check on this later

--- a/pc/planning/src/gtests/CMakeLists.txt
+++ b/pc/planning/src/gtests/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add executables
 set(TESTCASES_SRC
     graph_unittest.cpp
+    typesize_unittest.cpp
 )
 add_executable(start_tests start_tests.cpp ${TESTCASES_SRC})
 target_link_libraries(start_tests gtest)
