--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -23,7 +23,7 @@ add_subdirectory(src/quadtree)
 add_subdirectory(src/square_grid)
 #add_subdirectory(src/graph)
 add_subdirectory(src/map)
-add_subdirectory(src/visualizer)
+add_subdirectory(src/graph_vis)
 add_subdirectory(src/apps)
 add_subdirectory(src/smp)
 add_subdirectory(src/rrtstar)
