--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -22,5 +22,8 @@ target_link_libraries(test_sgrid squaregrid vis map ${OpenCV_LIBS})
 add_executable(test_image test_image.cpp)
 target_link_libraries(test_image vis ${OpenCV_LIBS})
 
+add_executable(test_maputils test_maputils.cpp)
+target_link_libraries(test_maputils squaregrid vis map ${OpenCV_LIBS})
+
 add_executable(test_traj test_traj.cpp)
 target_link_libraries(test_traj map vis ${OpenCV_LIBS})
