--- a/pc/planning/src/gtests/CMakeLists.txt
+++ b/pc/planning/src/gtests/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
-#find_package(OpenCV REQUIRED)
+find_package(OpenCV REQUIRED)
 
 # Add libraries
 #set(TESTCASES_SRC
@@ -18,6 +18,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(TESTCASES_SRC
     graph_unittest.cpp
     typesize_unittest.cpp
+    maputils_unittest.cpp
 )
-add_executable(start_tests start_tests.cpp ${TESTCASES_SRC})
-target_link_libraries(start_tests gtest)
+add_executable(gtest_all start_tests.cpp ${TESTCASES_SRC})
+target_link_libraries(gtest_all gtest map ${OpenCV_LIBS})
+
+add_executable(gtest_maputils start_tests.cpp maputils_unittest.cpp)
+target_link_libraries(gtest_maputils gtest map ${OpenCV_LIBS})
