--- a/pc/planning/src/planner/CMakeLists.txt
+++ b/pc/planning/src/planner/CMakeLists.txt
@@ -11,6 +11,7 @@ set(PLANNER_LIB_SRC
     rrts_planner.cpp
     #graph_planner.cpp
     quad_planner.cpp
+    planner_utils.cpp
 )
 add_library(planner STATIC ${PLANNER_LIB_SRC})
 target_link_libraries(planner ompl rrtstarkd ${OpenCV_LIBS})
