saved work, more adjustments needed for making rrts to work

--- a/pc/planning/src/planner/CMakeLists.txt
+++ b/pc/planning/src/planner/CMakeLists.txt
@@ -13,7 +13,7 @@ set(PLANNER_LIB_SRC
     quad_planner.cpp
 )
 add_library(planner STATIC ${PLANNER_LIB_SRC})
-target_link_libraries(planner ompl rrtstarkd ${OpenCV_LIBS})
+target_link_libraries(planner map ompl rrtstarkd ${OpenCV_LIBS})
 
 # Add executables
 add_executable(test_local test_local.cpp)
