--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -10,8 +10,8 @@ else()
 endif()
 
 # Add libraries
-#set(LIBHELLO_SRC hello.cpp)
-#add_library(hello STATIC ${LIBHELLO_SRC})
+#set(POLYOPT_LIB_SRC polyopt_utils.cpp)
+#add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
 
 # Add executables
 add_executable(test_qp qp_c++.cpp)
@@ -19,3 +19,6 @@ target_link_libraries(test_qp ${GUROBI_LIBRARIES})
 
 add_executable(qp_traj qp_traj.cpp)
 target_link_libraries(qp_traj ${GUROBI_LIBRARIES})
+
+add_executable(test_utils test_utils.cpp)
+target_link_libraries(test_utils ${GUROBI_LIBRARIES})
