--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -10,8 +10,8 @@ else()
 endif()
 
 # Add libraries
-#set(POLYOPT_LIB_SRC polyopt_utils.cpp)
-#add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
+set(POLYOPT_LIB_SRC polyopt_utils.cpp)
+add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
 
 # Add executables
 add_executable(test_qp qp_c++.cpp)
@@ -21,4 +21,4 @@ add_executable(qp_traj qp_traj.cpp)
 target_link_libraries(qp_traj ${GUROBI_LIBRARIES})
 
 add_executable(test_utils test_utils.cpp)
-target_link_libraries(test_utils ${GUROBI_LIBRARIES})
+target_link_libraries(test_utils polyopt ${GUROBI_LIBRARIES})
