more tests on gurobi

--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -14,11 +14,14 @@ set(POLYOPT_LIB_SRC polyopt_utils.cpp)
 add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
 
 # Add executables
-add_executable(test_qp qp_c++.cpp)
-target_link_libraries(test_qp ${GUROBI_LIBRARIES})
+add_executable(qp_cpp qp_c++.cpp)
+target_link_libraries(qp_cpp ${GUROBI_LIBRARIES})
 
 add_executable(qp_traj qp_traj.cpp)
 target_link_libraries(qp_traj ${GUROBI_LIBRARIES})
 
 add_executable(test_utils test_utils.cpp)
 target_link_libraries(test_utils polyopt ${GUROBI_LIBRARIES})
+
+add_executable(test_qp test_qp.cpp)
+target_link_libraries(test_qp polyopt ${GUROBI_LIBRARIES})
