saved work, to be continued after class

--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -13,24 +13,31 @@ endif()
 set(POLYOPT_LIB_SRC 
     polyopt_math.cpp
     gurobi_utils.cpp
+    traj_optimizer.cpp
+    polytraj_curve.cpp
+    quad_flattraj.cpp
 )
 add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
+target_link_libraries(polyopt ${GUROBI_LIBRARIES})
 
 # Add executables
-add_executable(qp_cpp qp_c++.cpp)
+add_executable(qp_cpp tests/qp_c++.cpp)
 target_link_libraries(qp_cpp ${GUROBI_LIBRARIES})
 
-add_executable(qp_traj qp_traj.cpp)
-target_link_libraries(qp_traj ${GUROBI_LIBRARIES})
-
-add_executable(test_utils test_utils.cpp)
+add_executable(test_utils tests/test_utils.cpp)
 target_link_libraries(test_utils polyopt ${GUROBI_LIBRARIES})
 
-add_executable(test_qp test_qp.cpp)
+add_executable(test_qp tests/test_qp.cpp)
 target_link_libraries(test_qp polyopt vis ${GUROBI_LIBRARIES})
 
-add_executable(test_qp2 test_qp2.cpp)
+add_executable(test_qp2 tests/test_qp2.cpp)
 target_link_libraries(test_qp2 polyopt ${GUROBI_LIBRARIES})
 
-add_executable(test_qp3 test_qp3.cpp)
+add_executable(test_qp3 tests/test_qp3.cpp)
 target_link_libraries(test_qp3 polyopt ${GUROBI_LIBRARIES})
+
+add_executable(test_opt test_opt.cpp)
+target_link_libraries(test_opt polyopt ${GUROBI_LIBRARIES})
+
+add_executable(test_trajdef test_trajdef.cpp)
+target_link_libraries(test_trajdef polyopt ${GUROBI_LIBRARIES})
