--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -23,11 +23,13 @@ add_subdirectory(src/quadtree)
 add_subdirectory(src/square_grid)
 #add_subdirectory(src/graph)
 add_subdirectory(src/map)
+add_subdirectory(src/local3d)
 add_subdirectory(src/vis)
 add_subdirectory(src/rrtstar)
 add_subdirectory(src/planner)
 add_subdirectory(src/apps)
 add_subdirectory(src/polyopt)
+#add_subdirectory(src/planning_server)
 
 if(BUILD_TESTS)
     add_subdirectory(src/gtests)
