--- a/pc/control/src/quad_sim/CMakeLists.txt
+++ b/pc/control/src/quad_sim/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../vrep_sim/vrep_lib/remoteApi)
 # Add libraries
 set(QUADSIM_LIB_SRC
     quad_sim_client.cpp
+    quad_sim_controller.cpp
 )
 add_library(quadsim STATIC ${QUADSIM_LIB_SRC})
 if (ENABLE_G3LOG)
@@ -20,4 +21,4 @@ target_link_libraries(quadsim vrep_sim)
 
 # Add executables
 add_executable(quadsim_demo quadsim_demo.cpp)
-target_link_libraries(quadsim_demo quadsim)
+target_link_libraries(quadsim_demo quadsim quad_con)
