new vrep interface works

--- a/pc/control/src/quad_sim/CMakeLists.txt
+++ b/pc/control/src/quad_sim/CMakeLists.txt
@@ -17,7 +17,7 @@ if (ENABLE_G3LOG)
 else (ENABLE_G3LOG)
 	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
 endif (ENABLE_G3LOG)
-target_link_libraries(quadsim vrep_sim)
+target_link_libraries(quadsim vrep_sim motion_server ${LCM_LIBRARIES})
 
 # Add executables
 add_executable(quadsim_demo quadsim_demo.cpp)
